# telosevm-exex-example

./: Cargo.toml  README.md
src/: exex.rs  main.rs
